# iced-component

./: Cargo.toml  README.md
crates/iced-adwaita/: Cargo.toml
crates/iced-adwaita/examples/: button_demo.rs  spinner_demo.rs
crates/iced-adwaita/src/: button.rs  context.rs  lib.rs  spinner.rs  theme.rs
crates/iced-adwaita/src/button/: animation.rs  content.rs  icon.rs  motion.rs  state.rs  style.rs  tests.rs  view.rs
crates/iced-adwaita/src/button/icon/: content.rs  source.rs  text_button.rs
crates/iced-adwaita/src/context/: transition.rs
crates/iced-adwaita/src/spinner/: appearance.rs  cadence.rs  frame.rs  sample.rs  shader.rs  spinner.wgsl  timeline.rs  visual.rs  widget.rs
crates/iced-adwaita/src/theme/: error.rs  interpolate.rs  tests.rs  tokens.rs
crates/iced-adwaita/themes/: adwaita-dark.toml  adwaita-light.toml
crates/iced-component/: Cargo.toml
crates/iced-component-core/: Cargo.toml
crates/iced-component-core/src/: component.rs  lib.rs  motion.rs
crates/iced-component-core/src/component/: animation.rs  button.rs  context.rs  macros.rs
crates/iced-component/examples/: adapter_button_demo.rs  adapter_loading_indicator_demo.rs  button_demo.rs  panel_demo.rs  spinner_demo.rs  surface_demo.rs
crates/iced-component/src/: backend.rs  button.rs  component.rs  context.rs  lib.rs  loading_indicator.rs  motion.rs  motions.rs  panel.rs  spinner.rs  surface.rs  theme.rs
crates/iced-component/src/backend/: adwaita.rs  loading_indicator.rs  material.rs
crates/iced-component/src/backend/adwaita/: loading_indicator.rs
crates/iced-component/src/backend/material/: loading_indicator.rs
crates/iced-component/src/button/: animated.rs  content.rs  defaults.rs  iced.rs  icon.rs  motion.rs  state.rs  style.rs  tests.rs  view.rs
crates/iced-component/src/button/icon/: source.rs
crates/iced-component/src/component/: context.rs  macros.rs
crates/iced-component/src/context/: defaults.rs  scheme.rs  tests.rs
crates/iced-component/src/loading_indicator/: defaults.rs  tests.rs
crates/iced-component/src/motion/: tokens.rs
crates/iced-component/src/motions/: adwaita.rs
crates/iced-component/src/panel/: layout.rs  view.rs
crates/iced-component/src/spinner/: motion.rs  shader.rs  tests.rs  view.rs
crates/iced-component/src/surface/: layout.rs  motion.rs  state.rs  style.rs  tests.rs  view.rs
crates/iced-component/src/theme/: context.rs  control.rs  error.rs  interpolate.rs  pack.rs  surface.rs
crates/iced-component/tests/: custom_backend.rs
crates/iced-component/themes/: adwaita-light.toml
crates/iced-material/: Cargo.toml
crates/iced-material/examples/: material_button_demo.rs
crates/iced-material/src/: button.rs  context.rs  lib.rs  loading_indicator.rs  theme.rs
crates/iced-material/src/button/: motion.rs  ripple.rs  state.rs  style.rs  tests.rs  view.rs  widget.rs
crates/iced-material/src/button/ripple/: shader.rs  state.rs
crates/iced-material/src/loading_indicator/: animation.rs  config.rs  geometry.rs  motion.rs  style.rs  tests.rs  timeline.rs  view.rs
crates/iced-material/src/loading_indicator/geometry/: cubic.rs  math.rs  morph.rs  polygon.rs  shapes.rs
crates/iced-material/src/loading_indicator/geometry/morph/: mapping.rs  measured.rs
crates/iced-material/src/loading_indicator/geometry/polygon/: corner.rs
crates/iced-material/src/theme/: error.rs  interpolate.rs  opacity.rs  tests.rs  tokens.rs
crates/iced-material/themes/: material-dark.toml  material-light.toml
