[workspace]
members = ["crates/iced-component"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Krteke"]
license = "MIT"
repository = "https://github.com/krteke/arua-iced-component"

[workspace.dependencies]
spectrum-theme = "0.1.1"
spectrum-schema = "0.1.1"
spectrum-resolver = "0.1.1"

aura-anim = { git = "https://github.com/krteke/aura-anim-iced" }
iced = { version = "0.14.0", features = ["tokio"] }

toml = "1.1.2"
thiserror = "2.0.18"

float-cmp = "0.10.0"

iced-component = { version = "0.1.0", path = "crates/iced-component" }

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"
unreachable_pub = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
alloc_instead_of_core = "warn"
std_instead_of_core = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
