[workspace]
members = [
    "crates/iced-component-core",
    "crates/iced-component",
    "crates/iced-adwaita",
    "crates/iced-material",
]
resolver = "3"
exclude = ["reference"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Krteke"]
license = "MIT"
repository = "https://github.com/krteke/arua-iced-component"

[workspace.dependencies]
spectrum-theme = { git = "https://github.com/krteke/void-spectrum" }
aura-anim = { git = "https://github.com/krteke/aura-anim-iced", default-features = false }

iced = { version = "0.14.0", features = ["tokio"] }
iced_wgpu = "0.14.0"
bytemuck = "1.25.0"
thiserror = "2.0.18"
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }

float-cmp = "0.10.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

iced-component-core = { version = "0.1.0", path = "crates/iced-component-core" }
iced-component = { version = "0.1.0", path = "crates/iced-component" }
iced-adwaita = { version = "0.1.0", path = "crates/iced-adwaita" }
iced-material = { version = "0.1.0", path = "crates/iced-material" }

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"
unreachable_pub = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
alloc_instead_of_core = "warn"
std_instead_of_core = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
