[package]
name = "iced-adwaita"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-anim.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
iced = { workspace = true, features = ["wgpu"] }
iced-component-core.workspace = true
iced_wgpu.workspace = true
spectrum-theme = { workspace = true, features = ["macros", "toml", "iced"] }
thiserror.workspace = true
tracing = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
float-cmp.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
serde = ["dep:serde", "spectrum-theme/serde"]
tracing = ["dep:tracing", "iced-component-core/tracing"]

[lints]
workspace = true
