[package]
name = "iced-component-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-anim = { workspace = true, features = ["oklaba"] }
tracing = { workspace = true, optional = true }

[features]
default = []
tracing = ["dep:tracing", "aura-anim/tracing"]

[lints]
workspace = true
