[package]
name = "iced-component"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iced.workspace = true
iced-adwaita.workspace = true
iced-component-core.workspace = true
iced-material.workspace = true

[features]
default = []
serde = ["iced-adwaita/serde", "iced-material/serde"]
tracing = [
    "iced-adwaita/tracing",
    "iced-component-core/tracing",
    "iced-material/tracing",
]

[lints]
workspace = true
