[package]
name = "iced-component"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iced.workspace = true
iced-component-core.workspace = true
iced-adwaita = { workspace = true, optional = true }
iced-material = { workspace = true, optional = true }

[features]
default = ["adwaita", "material"]
adwaita = ["dep:iced-adwaita"]
material = ["dep:iced-material"]
serde = ["iced-adwaita?/serde", "iced-material?/serde"]
tracing = [
    "iced-adwaita?/tracing",
    "iced-component-core/tracing",
    "iced-material?/tracing",
]

[dev-dependencies]
aura-anim.workspace = true

[[example]]
name = "adapter_button_demo"
required-features = ["adwaita", "material"]

[lints]
workspace = true
