[package]
name = "iced-material"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iced-component-core.workspace = true
spectrum-theme = { workspace = true, features = ["macros", "toml", "iced"] }
thiserror.workspace = true

[lints]
workspace = true
