[package]
name = "iced-material"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-anim.workspace = true
iced.workspace = true
iced-component-core.workspace = true
iced_widget = { version = "0.14.2", features = ["canvas", "wgpu"] }
spectrum-theme = { workspace = true, features = ["macros", "toml", "iced"] }
thiserror.workspace = true
tracing = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "spectrum-theme/serde"]
tracing = ["dep:tracing", "iced-component-core/tracing"]

[lints]
workspace = true
